nuevos comandos aprendidos

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <p>sudo apt autoremove, para eliminar la aplicaciones.</p>
     <p>clear: para limpiar la plantalla de comandos</p>
     <p>npm instala paquetes - npx solo los ejecuta sin instalarlos.</p>
+    <p>sudo apt install git para instalar git</p>
+    <p>git --version para revisar la versión</p>
+    <p>rm -rf test para eliminar una carpeta con todo su contenido</p>
+    <p>ssh-keygen -t rsa -b 4096 -C "maguz727@gmail.com" crear llave ssh para la conexión con git</p>
+    <p>eval "$(ssh-agent -s)" evaluar el agente ssh</p>
+    <p>cd ~/.ssh ingresar a la carpeta creada de ssh</p>
+    <p>git init para iniciar git</p>
+    <p>git add para agregar los cambios</p>
+    <p>git commit -m "Descripción del cambio"</p>
 
 </body>
 </html>
